--- a/post-details.html
+++ b/post-details.html
@@ -9,7 +9,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./style.css">
     
-    
+        <link rel="icon" href="https://media.homegate.ch/image/upload/assets/icons/favicon-32x32.png" sizes="32x32" type="image/png">
+    <link rel="icon" href="https://media.homegate.ch/image/upload/assets/icons/favicon-16x16.png" sizes="16x16" type="image/png">
+    <link rel="shortcut icon" href="https://media.homegate.ch/image/upload/assets/icons/favicon.ico">
+
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom border-gray ml-5">
